--- a/site-plan.html
+++ b/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Christmas Site Plan</h1>
+      <h2>Sophie Archibald</h2>
+      <h2>WDD 130-01</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -27,13 +27,15 @@
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>The intended audience for this site will be anyone looking for fun group activities to do around
+        the holiday season. This could include a mother looking for activities to do with her kids or a college
+        student looking for party recipes and decor inspiration. </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/christmas-logo.png" alt="Christmas Logo" width="400px">
       <hr>
       <h2>
         Style Guide
@@ -60,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: "Lilita One"  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: "Cormorant Garamond"  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
