Added photos and description to site plan

--- a/site-plan.html
+++ b/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Traditions</a>
+        <a href="#">Movie Recs</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Traditions <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Movie Recs  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,53 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Christmas is a time for joy and a time to make memories with those you love. This site provides ideas and suggestions for holiday
+        activities to bring you and your family joy. It provides a list of movie recommendations and suggestions for traditions to start
+        doing as a family to serve others and to bring you closer together.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/christmas-treats.jpg" alt="Plate of Christmas treats">
+        <img src="images/plain-tree.jpg" alt="Christmas tree in a house">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Traditions</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Going to see Christmas Lights – This is an inexpensive and fun family activity that can be done with people of all ages. Families can appreciate the joy of the Christmas season as they look at the lights either on houses around their neighborhood or lights put up on trees in their community. This activity can either be done on its own, or a group could treat themselves to hot chocolate afterwards to warm up from the cold. 
+
+        Baking/Decorating Christmas cookies – This is a fun activity that can be done in the comfort of your own home. The whole group gets to work together to bake a delicious product. After making and shaping the cookies, the whole group gets to show off their artistic abilities by decorating the cookies. The cookies can either all be eaten by the group, or this activity could become a service activity if the group decides to drop off cookies to their friends, neighbors, or family. 
+
+        Secret Santa Gift Exchange – This is a fun activity where each person gets the name of another person in the group. Then, their responsibility is to buy an inexpensive gift for that person but to keep it a secret. Everyone in the group then gets together and gives each other their gift closer to Christmas time. 
+
+        Decorating the Christmas Tree – This family activity gets everybody in the holiday spirit and helps everyone to have a fun time preparing your home for Christmas. It’s an activity that can be enjoyed by people of all ages.  
+
+        Christmas Caroling – This is a great way to bring the Christmas spirit to the group and to spread Christmas cheer. Caroling is another inexpensive and fun activity that can be done outdoors. It can also be done as service if the group wants to sing to a group who might need some extra happiness during the Christmas season. For example, singing to a group at a care center or perhaps a neighbor who might be lonely could be a great way to bring joy to them and to those they sing to. 
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for the Traditions page</p>
+        <img src="images/christmas-decorating.jpeg" alt="Family decorating a Christmas tree">
+        <img src="images/outdoor-lights.jpg" alt="Outdoor Christmas lights">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Movie Recommendations</h3>
       <p>
-        [Written copy for the Page 3 here]
+        White Christmas – A wholesome family musical that will get the whole family in the mood to go skiing at a cozy cabin. 
+
+        The Grinch – The Grinch is a fun family cartoon that focuses on the concept of change. The Grinch learns the true meaning of Christmas and realizes that happiness comes from helping others.
+
+        Home Alone – Home Alone is a movie that focuses on character growth and the importance of families. It’s a fun holiday comedy that will get the kids excited for Christmas. 
+
+        Elf – Elf is a movie with comedic character growth and that teaches the true meaning of family. Buddy the Elf helps his long-lost father to learn what it really means to be humble and take care of your family. 
+
+        A Charlie Brown Christmas – A holiday classic, A Charlie Brown Christmas teaches its audience that Christmas is more than the superficial celebrations that are so often focused on. Charlie Brown and his friends learn the true meaning of Christmas. 
+
+        Barbie Nutcracker – Barbie Nutcracker exposes children to some of the highest forms of art at a young age, while keeping it entertaining for them. Barbie Nutcracker is a short and sweet holiday movie that mixes classical ballet and music to portray the timeless story of the Nutcracker. 
+
+        It’s a Wonderful Life – This movie teaches about what things truly matter in life. While hardship and financial struggles may arise, focusing on the good things, especially family, will help us all to become happier. 
+
+        Eloise at Christmas time – Eloise at Christmastime is about a young girl who lives at The Plaza Hotel and gets to be part of the Christmas culture there. She learns lessons along the way as she helps save a friend from a big mistake. 
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the Movie Recommendations page</p>
+        <img src="images/family-movie.webp" alt="Family watching a Christmas movie">
+        <img src="images/white-christmas.jpeg" alt="White Christmas movie poster">
 
       </ul>
       <hr>
@@ -163,13 +187,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Traditions</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Movie Recommendations</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
