--- a/site-plan.html
+++ b/site-plan.html
@@ -189,15 +189,15 @@
 
       <h3>Traditions</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [Any additional details about the Traditions page that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="#" alt="Traditions page wireframe">
 
       <h3>Movie Recommendations</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Any additional details about the Movie Recommendations page that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="#" alt="Movie Recs page wireframe">
     </main>
   </body>
 
