Added images to the traditions page to the site plan.

--- a/site-plan.html
+++ b/site-plan.html
@@ -149,6 +149,9 @@
       <p>Images for the Traditions page</p>
         <img src="images/christmas-decorating.jpeg" alt="Family decorating a Christmas tree">
         <img src="images/outdoor-lights.jpg" alt="Outdoor Christmas lights">
+        <img src="images/caroling.png" alt="Groupp of carolers at Christmas time">
+        <img src="images/cookie-decorating.jpg" alt="Two people decorating Christmas cookies">
+        <img src="images/gift-exchange.jpg" alt="Someone preparing a Christmas gift">
 
       </ul>
       <h3>Movie Recommendations</h3>
