Added images to movie recommendations page in site plan

--- a/site-plan.html
+++ b/site-plan.html
@@ -166,15 +166,16 @@
 
         A Charlie Brown Christmas – A holiday classic, A Charlie Brown Christmas teaches its audience that Christmas is more than the superficial celebrations that are so often focused on. Charlie Brown and his friends learn the true meaning of Christmas. 
 
-        Barbie Nutcracker – Barbie Nutcracker exposes children to some of the highest forms of art at a young age, while keeping it entertaining for them. Barbie Nutcracker is a short and sweet holiday movie that mixes classical ballet and music to portray the timeless story of the Nutcracker. 
-
         It’s a Wonderful Life – This movie teaches about what things truly matter in life. While hardship and financial struggles may arise, focusing on the good things, especially family, will help us all to become happier. 
-
-        Eloise at Christmas time – Eloise at Christmastime is about a young girl who lives at The Plaza Hotel and gets to be part of the Christmas culture there. She learns lessons along the way as she helps save a friend from a big mistake. 
       </p>
       <p>Images for the Movie Recommendations page</p>
         <img src="images/family-movie.webp" alt="Family watching a Christmas movie">
         <img src="images/white-christmas.jpeg" alt="White Christmas movie poster">
+        <img src="images/grinch-movie.jpg" alt="Grinch movie poster">
+        <img src="images/home-alone.webp" alt="Home Alone movie poster">
+        <img src="images/elf.webp" alt="Elf movie poster">
+        <img src="images/charlie-brown.jpg" alt="Charlie Brown Christmas movie poster">
+        <img src="images/its-a-wonderful-life.jpg" alt="It's A Wonderful Life movie poster">
 
       </ul>
       <hr>
