Added traditions page wireframe

--- a/site-plan.html
+++ b/site-plan.html
@@ -195,7 +195,7 @@
       <p>         
         [Any additional details about the Traditions page that the wireframe does not make clear]
       </p>
-      <img src="#" alt="Traditions page wireframe">
+      <img src="images/traditions-wireframe.png" alt="Traditions page wireframe">
 
       <h3>Movie Recommendations</h3>
       <p>         
