Added movie recommendations wireframe.

--- a/site-plan.html
+++ b/site-plan.html
@@ -201,7 +201,7 @@
       <p>         
         [Any additional details about the Movie Recommendations page that the wireframe does not make clear]
       </p>
-      <img src="#" alt="Movie Recs page wireframe">
+      <img src="images/movie-recommendations-wireframe.png" alt="Movie Recs page wireframe">
     </main>
   </body>
 
