Added link to site plan in the footer.

--- a/movie-recs.html
+++ b/movie-recs.html
@@ -54,6 +54,8 @@
 
             <p>Christmas Copyright 2024 Sophie Archibald</p>
 
+            <a href="site-plan.html">Site Plan</a>
+
             <img class="logo-img" src="images/christmas-logo.png" alt="Christmas Website Logo">
 
 
