--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
             <p>Christmas Copyright 2024 Sophie Archibald</p>
 
+            <a href="site-plan.html">Site Plan</a>
+
             <img class="logo-img" src="images/christmas-logo.png" alt="Christmas Website Logo">
 
 
