Created navigation bar.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <nav>
-            <a href="index.html"><img class="logo-img" src="images/christmas-logo.png" alt="Christmas Website Logo"></a>
-            <ul>
-                <li><a href="traditions.html">Traditions</a></li>
-                <li><a href="movie-recs.html">Movie Recommendations</a></li>
-            </ul>
+            <img class="logo-img" src="images/christmas-logo.png" alt="Christmas Website Logo">
+            <a href="index.html">Home</a>
+            <a href="traditions.html">Traditions</a>
+            <a href="movie-recs.html">Movie Recommendations</a>
         </nav>
     </header>
     <main>
@@ -70,5 +70,6 @@
 
         </nav>
     </footer>
+</div>
 </body>
 </html>
