Finished home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="content">
     <header>
-        <nav>
+        <nav id="header-nav">
             <img class="logo-img" src="images/christmas-logo.png" alt="Christmas Website Logo">
             <a href="index.html">Home</a>
             <a href="traditions.html">Traditions</a>
@@ -54,16 +54,16 @@
         </div>
     </main>
     <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="traditions.html">Traditions</a></li>
-                <li><a href="movie-recs.html">Movie Recommendations</a></li>
-            </ul>
+        <nav id="footer-nav">
+            <!-- <div id="footer-links"> -->
+            <a id="index-link" href="index.html">Home</a>
+            <a id="traditions-link" href="traditions.html">Traditions</a>
+            <a id="movie-link" href="movie-recs.html">Movie Recommendations</a>
+            <!-- </div> -->
 
             <p>Christmas Copyright 2024 Sophie Archibald</p>
 
-            <a href="site-plan.html">Site Plan</a>
+            <a id="site-plan" href="site-plan.html">Site Plan</a>
 
             <img class="logo-img" src="images/christmas-logo.png" alt="Christmas Website Logo">
 
