Working on overlay

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     setInterval(updateCountdown, 1000);
                 </script>
                 <p id="counter-text">Christmas is coming up! Prepare soon to make memories and have fun with those you love.</p>
-                <img id="home-tree" src="images/plain-tree.jpg" alt="Christmas tree">
+                <img class="home-tree" src="images/plain-tree.jpg" alt="Christmas tree">
+                <div class="overlay"></div>
     
         </div>
     </main>
