Added overlay to the Christmas tree photo on home page

--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
                     setInterval(updateCountdown, 1000);
                 </script>
                 <p id="counter-text">Christmas is coming up! Prepare soon to make memories and have fun with those you love.</p>
+            <div class="overlay-container">
                 <img class="home-tree" src="images/plain-tree.jpg" alt="Christmas tree">
-                <div class="overlay"></div>
-    
+                <div class="overlay">
+                    <div id="overlay-text">Merry Christmas!</div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
