--- a/movie-recs.html
+++ b/movie-recs.html
@@ -22,35 +22,35 @@
         </div>
         <h1>Movie Recommendations</h1>
         <div id="movie-grid">
-            <img id="white-christmas-image" class="white-christmas" class="movie-images" src="images/white-christmas.jpeg" alt="White Christmas movie poster">
+            <img id="white-christmas-image" class="white-christmas movie-images" src="images/white-christmas.jpeg" alt="White Christmas movie poster">
             <div id="white-christmas">
-                <h2 class="white-christmas" class="movie-titles">White Christmas</h2>
-                <p id="white-christmas-p" class="white-christmas" class="movie-paragraphs">A wholesome family musical that will get the whole family in the mood to go skiing at a cozy cabin.</p>
+                <h2 class="white-christmas">White Christmas</h2>
+                <p id="white-christmas-p" class="white-christmas movie-paragraphs">A wholesome family musical that will get the whole family in the mood to go skiing at a cozy cabin.</p>
             </div>
-            <img id="grinch-image" class ="grinch" class="movie-images" src="images/grinch-movie.jpg" alt="The Grinch movie poster">
+            <img id="grinch-image" class ="grinch movie-images" src="images/grinch-movie.jpg" alt="The Grinch movie poster">
             <div class="grinch">
-                <h2 class ="grinch" class="movie-titles">The Grinch</h2>
-                <p id="grinch-p"class ="grinch" class="movie-paragraphs">The Grinch is a fun family cartoon that focuses on the concept of change. The Grinch learns the true meaning of Christmas and realizes that happiness comes from helping others.</p>
+                <h2 class ="grinch">The Grinch</h2>
+                <p id="grinch-p" class ="grinch movie-paragraphs">The Grinch is a fun family cartoon that focuses on the concept of change. The Grinch learns the true meaning of Christmas and realizes that happiness comes from helping others.</p>
             </div>
-            <img id="home-alone-image" class="home-alone" class="movie-images" src="images/home-alone.webp" alt="Home Alone movie poster">
+            <img id="home-alone-image" class="home-alone movie-images" src="images/home-alone.webp" alt="Home Alone movie poster">
                 <div id="home-alone">
-                <h2 class="home-alone" class="movie-titles">Home Alone</h2>
-            <p id="home-alone-p" class="home-alone" class="movie-paragraphs">Home Alone is a movie that focuses on character growth and the importance of families. It’s a fun holiday comedy that will get the kids excited for Christmas.</p>
+                <h2 class="home-alone">Home Alone</h2>
+            <p id="home-alone-p" class="home-alone movie-paragraphs">Home Alone is a movie that focuses on character growth and the importance of families. It’s a fun holiday comedy that will get the kids excited for Christmas.</p>
             </div>
-            <img id="elf-image" class="elf" class="movie-images" src="images/elf.webp" alt="Elf movie poster">
+            <img id="elf-image" class="elf movie-images" src="images/elf.webp" alt="Elf movie poster">
             <div class="elf">
-                <h2 class ="elf" class="movie-titles">Elf</h2>
-                <p id="elf-p" class ="elf" class="movie-paragraphs">Elf is a movie with comedic character growth and that teaches the true meaning of family. Buddy the Elf helps his long-lost father to learn what it really means to be humble and take care of your family.</p>
+                <h2 class ="elf">Elf</h2>
+                <p id="elf-p" class ="elf movie-paragraphs">Elf is a movie with comedic character growth and that teaches the true meaning of family. Buddy the Elf helps his long-lost father to learn what it really means to be humble and take care of your family.</p>
             </div>
-            <img id="charlie-brown-image" class="charlie-brown" class="movie-images" src="images/charlie-brown.jpg" alt="Charlie Brown Christmas movie poster">
+            <img id="charlie-brown-image" class="charlie-brown movie-images" src="images/charlie-brown.jpg" alt="Charlie Brown Christmas movie poster">
             <div class="charlie-brown">
-                <h2 class="charlie-brown" class="movie-titles">A Charlie Brown Christmas</h2>
-                <p id="charlie-brown-p" class="charlie-brown" class="movie-paragraphs">A holiday classic, A Charlie Brown Christmas teaches its audience that Christmas is more than the superficial celebrations that are so often focused on. Charlie Brown and his friends learn the true meaning of Christmas.</p>
+                <h2 class="charlie-brown">A Charlie Brown Christmas</h2>
+                <p id="charlie-brown-p" class="charlie-brown movie-paragraphs">A holiday classic, A Charlie Brown Christmas teaches its audience that Christmas is more than the superficial celebrations that are so often focused on. Charlie Brown and his friends learn the true meaning of Christmas.</p>
             </div>
-            <img id="wonderful-life-image" class="wonderful-life" class="movie-images" src="images/its-a-wonderful-life.jpg" alt="It's A Wonderful Life movie poster">
+            <img id="wonderful-life-image" class="wonderful-life movie-images" src="images/its-a-wonderful-life.jpg" alt="It's A Wonderful Life movie poster">
             <div class="wonderful-life">
-                <h2 class="wonderful-life" class="movie-titles">It's A Wonderful Life</h2>
-                <p id="wonderful-life-p" class="wonderful-life" class="movie-paragraphs">This movie teaches about what things truly matter in life. While hardship and financial struggles may arise, focusing on the good things, especially family, will help us all to become happier.</p>
+                <h2 class="wonderful-life movie-titles">It's A Wonderful Life</h2>
+                <p id="wonderful-life-p" class="wonderful-life movie-paragraphs">This movie teaches about what things truly matter in life. While hardship and financial struggles may arise, focusing on the good things, especially family, will help us all to become happier.</p>
             </div>
         </div>
         
@@ -73,5 +73,6 @@
 
         </nav>
     </footer>
+</div>
 </body>
 </html>
