--- a/traditions.html
+++ b/traditions.html
@@ -21,22 +21,22 @@
             <img id="traditions-hero-img" src="images/christmas-lights.jpg" alt="Christmas lights">
         </div>
         <h1>Traditions</h1>
-        <div id="traditions-grid">
-            <h2 class="traditions-titles">Seeing Christmas Lights</h2>
-            <p id="christmas-lights-p">This is an inexpensive and fun family activity that can be done with people of all ages. Families can appreciate the joy of the Christmas season as they look at the lights either on houses around their neighborhood or lights put up on trees in their community. This activity can either be done on its own, or a group could treat themselves to hot chocolate afterwards to warm up from the cold.</p>
-            <img id="outdoor-lights" src="images/outdoor-lights.jpg" alt="Outdoor Christmas lights">
-            <h2 class="traditions-titles">Making/Decorating Cookies</h2>
-            <p id="cookies-p">This is a fun activity that can be done in the comfort of your own home. The whole group gets to work together to bake a delicious product. After making and shaping the cookies, the whole group gets to show off their artistic abilities by decorating the cookies. The cookies can either all be eaten by the group, or this activity could become a service activity if the group decides to drop off cookies to their friends, neighbors, or family.</p>
-            <img id="cookies" src="images/cookie-decorating.jpg" alt="Decorating Christmas cookies">
-            <h2 class="traditions-titles">Decorating the Tree</h2>
-            <p id="tree-decorating-p">This family activity gets everybody in the holiday spirit and helps everyone to have a fun time preparing your home for Christmas. It’s an activity that can be enjoyed by people of all ages.</p>
-            <img id="tree-decorating" src="images/christmas-tree.jpeg" alt="People decorating a Christmas Tree">
-            <h2 class="traditions-titles">Secret Santa Gift Exchange</h2>
-            <img id="gift-exchange" src="images/gift-exchange.jpg" alt="Someone preparing a Christmas gift">
-            <p id="gift-exchange-p">This is a fun activity where each person gets the name of another person in the group. Then, their responsibility is to buy an inexpensive gift for that person but to keep it a secret. Everyone in the group then gets together and gives each other their gift closer to Christmas time.</p>
-            <h2 class="traditions-titles">Christmas Caroling</h2>
-            <p id="caroling-p">This is a great way to bring the Christmas spirit to the group and to spread Christmas cheer. Caroling is another inexpensive and fun activity that can be done outdoors. It can also be done as service if the group wants to sing to a group who might need some extra happiness during the Christmas season. For example, singing to a group at a care center or perhaps a neighbor who might be lonely could be a great way to bring joy to them and to those they sing to.</p>
-            <img id="caroling" src="images/caroling.png" alt="Group of people caroling">
+        <div class="traditions-grid">
+            <h2 id="christmas-lights-title">Seeing Christmas Lights</h2>
+            <p class="christmas-lights-items" id="christmas-lights-p">This is an inexpensive and fun family activity that can be done with people of all ages. Families can appreciate the joy of the Christmas season as they look at the lights either on houses around their neighborhood or lights put up on trees in their community. This activity can either be done on its own, or a group could treat themselves to hot chocolate afterwards to warm up from the cold.</p>
+            <img class="christmas-lights-items" id="outdoor-lights" src="images/outdoor-lights.jpg" alt="Outdoor Christmas lights">
+            <h2 id="cookies-title">Making/Decorating Cookies</h2>
+            <p class="cookies-items" id="cookies-p">This is a fun activity that can be done in the comfort of your own home. The whole group gets to work together to bake a delicious product. After making and shaping the cookies, the whole group gets to show off their artistic abilities by decorating the cookies. The cookies can either all be eaten by the group, or this activity could become a service activity if the group decides to drop off cookies to their friends, neighbors, or family.</p>
+            <img class="cookies-items" id="cookies" src="images/cookie-decorating.jpg" alt="Decorating Christmas cookies">
+            <h2 id="tree-decorating-title">Decorating the Tree</h2>
+            <p class="tree-decorating-items" id="tree-decorating-p">This family activity gets everybody in the holiday spirit and helps everyone to have a fun time preparing your home for Christmas. It’s an activity that can be enjoyed by people of all ages.</p>
+            <img class="tree-decorating-items" id="tree-decorating" src="images/christmas-tree.jpeg" alt="People decorating a Christmas Tree">
+            <h2 id="gift-exchange-title">Secret Santa Gift Exchange</h2>
+            <img class="gift-exchange-items" id="gift-exchange" src="images/gift-exchange.jpg" alt="Someone preparing a Christmas gift">
+            <p class="gift-exchange-items" id="gift-exchange-p">This is a fun activity where each person gets the name of another person in the group. Then, their responsibility is to buy an inexpensive gift for that person but to keep it a secret. Everyone in the group then gets together and gives each other their gift closer to Christmas time.</p>
+            <h2 id="caroling-title">Christmas Caroling</h2>
+            <p class="caroling-items" id="caroling-p">This is a great way to bring the Christmas spirit to the group and to spread Christmas cheer. Caroling is another inexpensive and fun activity that can be done outdoors. It can also be done as service if the group wants to sing to a group who might need some extra happiness during the Christmas season. For example, singing to a group at a care center or perhaps a neighbor who might be lonely could be a great way to bring joy to them and to those they sing to.</p>
+            <img class="caroling-items" id="caroling" src="images/caroling.png" alt="Group of people caroling">
         </div>
         
     </main>
