--- a/traditions.html
+++ b/traditions.html
@@ -36,7 +36,7 @@
             <p class="gift-exchange-items" id="gift-exchange-p">This is a fun activity where each person gets the name of another person in the group. Then, their responsibility is to buy an inexpensive gift for that person but to keep it a secret. Everyone in the group then gets together and gives each other their gift closer to Christmas time.</p>
             <h2 id="caroling-title">Christmas Caroling</h2>
             <p class="caroling-items" id="caroling-p">This is a great way to bring the Christmas spirit to the group and to spread Christmas cheer. Caroling is another inexpensive and fun activity that can be done outdoors. It can also be done as service if the group wants to sing to a group who might need some extra happiness during the Christmas season. For example, singing to a group at a care center or perhaps a neighbor who might be lonely could be a great way to bring joy to them and to those they sing to.</p>
-            <img class="caroling-items" id="caroling" src="images/caroling.png" alt="Group of people caroling">
+            <img class="caroling-items" id="caroling" src="images/caroling.jpeg" alt="Group of people caroling">
         </div>
         
     </main>
